@@ -39,7 +39,7 @@
 
 // CVS ID strings
 extern const char *CVSid1, *CVSid2;
-const char *CVSid3="$Id: smartd.c,v 1.35 2002/10/26 10:19:16 ballen4705 Exp $" 
+const char *CVSid3="$Id: smartd.c,v 1.36 2002/10/26 19:33:40 ballen4705 Exp $" 
 CVSID1 CVSID4 CVSID7;
 
 // This function prints either to stdout or to the syslog as needed
@@ -401,72 +401,6 @@ void CheckDevices (  atadevices_t *atadevices, scsidevices_t *scsidevices){
   }
 }
 
-
-int massagecvs(char *out,const char *in){
-  char filename[128], version[128], date[128];
-  int i=0;
-  const char *savein=in;
-
-  // skip to I of $Id:
-  while (*in && *in!='I')
-    in++;
-  
-  // skip to start of filename
-  if (!*in)
-    return 0;
-  in+=4;
-
-  // copy filename
-  i=0;
-  while (i<100 && *in!=',' && *in)
-    filename[i++]=*in++;
-  filename[i]='\0';
-  if (!*in)
-    return 0;
-
-  // skip ,v and space
-  in+=3;
-
-  i=0;
-  // copy version number
-  while (i<100 && *in!=' ' && *in)
-    version[i++]=*in++;
-  version[i]='\0';
-  if (!*in)
-    return 0;
-
-  // skip space
-  in++;
-  // copy date
-  i=0;
-  while (i<100 && *in!=' ' && *in)
-    date[i++]=*in++;
-  date[i]='\0';
-
-  sprintf(out,"%-13s revision: %-6s date: %-15s", filename, version, date);
-  return in-savein;
-}
-
-// prints a single set of CVS ids
-void printone(const char *cvsid){
-  char strings[512];
-  const char *here;
-  int len,line=1;
-  here=cvsid;
-  while ((len=massagecvs(strings,here))){
-    switch (line++){
-    case 1:
-      printout(LOG_INFO,"Module:");
-      break;
-    default:
-      printout(LOG_INFO,"  uses:");
-    } 
-    printout(LOG_INFO," %s\n",strings);
-    here+=len;
-  }
-  return;
-}
-
 char copyleftstring[]=
 "smartd comes with ABSOLUTELY NO WARRANTY. This\n"
 "is free software, and you are welcome to redistribute it\n"
@@ -536,6 +470,30 @@ int parseconfigfile(){
     if (!len || *dev=='#')
       continue;
     
+#if 0
+    // This is the start of some code to handle continuation
+    // characters in the /etc/smartd.conf file.  Note that these must
+    // be the final character on a line, with just a newline after
+    // them.  No other white space afterwards.
+
+    if (continuation+len>maxlinelen)
+      error;
+    
+    curr=config[entry].name+continuation;
+    strcpy(curr,dev);
+
+
+    if (cur[len-1]=='\ '){
+      cur[len-1]=' ';
+      continuation+=len;
+      continue;
+    }
+    else {
+      continuation=0;
+      lineno++;
+    }
+#endif
+
     // We've got a legit entry
     if (entry>=MAXENTRIES){
       printout(LOG_CRIT,"Error: configuration file %s can have no more than %d entries\n",
@@ -608,13 +566,17 @@ void ParseOpts(int argc, char **argv){
   
   // If needed print copyright, license and version information
   if (printcopyleft){
+    char out[CVSMAXLEN];
     debugmode=1;
     printhead();
     printout(LOG_INFO,copyleftstring);
     printout(LOG_INFO,"CVS version IDs of files used to build this code are:\n");
-    printone(CVSid3);
-    printone(CVSid1);
-    printone(CVSid2);
+    printone(out,CVSid3);
+    printout(LOG_INFO,"%s",out);
+    printone(out,CVSid1);
+    printout(LOG_INFO,"%s",out);
+    printone(out,CVSid2);
+    printout(LOG_INFO,"%s",out);
     exit(0);
   }
   
